# anti-ai-style-factory

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GETTING_STARTED.md  ISSUE.md  LICENSE  README.md  README_zh.md  action.yml  docker-compose.yml  pyproject.toml  test_maas.py
.github/workflows/: ci.yml  gallery.yml
catalog/: SEEDS.md
config/: pipeline.yaml
demos/: brutalist-web-demo.html  japanese-minimal-demo.html  neon-sign-demo.html  terrazzo-demo.html  vaporwave-demo.html
docs/: DOGFOOD_EVIDENCE.md
examples/: github-action-usage.yml
gallery/: index.html
gallery/css/: gallery.css
gallery/js/: app.js  filters.js  scorer.js  virtual-scroll.js
sample_styles/art-deco/: DESIGN.md  metadata.json  reference.html
sample_styles/bauhaus/: DESIGN.md  metadata.json  reference.html
sample_styles/brutalist-web/: reference.html
sample_styles/cyberpunk/: DESIGN.md  metadata.json  reference.html
sample_styles/memphis/: DESIGN.md  metadata.json  reference.html
sample_styles/pop-art/: DESIGN.md  metadata.json  reference.html
sample_styles/swiss-intl/: DESIGN.md  metadata.json  reference.html
sample_styles/terminal/: DESIGN.md  metadata.json  reference.html
sample_styles/ukiyo-e/: DESIGN.md  metadata.json  reference.html
sample_styles/wabi-sabi/: DESIGN.md  metadata.json  reference.html
scripts/: build_gallery.py  repair_reference_html.py  seed_generator.py
src/: __init__.py
src/generator/: llm_generator.py
src/pipeline/: batch_runner.py  run.py
src/scorer/: __init__.py  eight_dim.py
tests/: test_scorer.py
(+165 files in other folders)
